--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--accent-color);
-    margin-right: 76px; 
+    margin-right: 76px;
 }
 
 .logo-dark-part {
@@ -232,6 +232,7 @@ img {
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
+    display: flex;
 }
 .menu {
     display: flex;
