--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,8 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--dark-title-color);
-    padding: 24px 0;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .header-nav {
