--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,19 @@ body {
     margin-right: 76px;
 }
 
+.logo-footer {
+    display: inline-block;
+    font-family: "Raleway", sans-serif;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--accent-color);
+    margin-bottom: 16px;
+}
+
 .logo-dark-part {
     color: #2E2F42;
 }
