--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,11 @@ body {
     line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
+    font-weight: 700;
+    color: #ffffff;
+    max-width: 496px;
+    margin: 0 auto;
+    margin-bottom: 48px;
 }
 
 .hero-btn {
