--- a/css/styles.css
+++ b/css/styles.css
@@ -266,3 +266,9 @@ img {
     display: flex;
     gap: 40px;
 }
+.main-about {
+    padding: 120px 0;
+}
+.about-company-item {
+    width: calc((100% - 72px) / 4);
+}
