--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,7 @@ body {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--dark-title-color);
+    margin-bottom: 8px;
 }
 
 .card-text {
@@ -275,4 +276,8 @@ img {
 }
 .about-company-item {
     width: calc((100% - 72px) / 4);
+}
+.about-company {
+    display: flex;
+    gap: 24px;
 }
