--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,9 @@ body {
     letter-spacing: 0.02em;
     color: var(--dark-title-color);
     padding-top: 24px;
-    padding-bottom: 24px ;
+    padding-bottom: 24px;
+    display:flex;
+    gap: 40px;
 }
 
 .header-nav {
