--- a/css/styles.css
+++ b/css/styles.css
@@ -113,14 +113,12 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--dark-title-color);font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--dark-title-color);
-    padding-top: 24px;
-    padding-bottom: 24px;
-    display:flex;
+}
+
+.header-list {
     gap: 40px;
 }
+
 
 .header-nav {
     display: flex;
