--- a/css/styles.css
+++ b/css/styles.css
@@ -230,7 +230,10 @@ footer {
     letter-spacing: 0.04em;
     text-align: center;
 }
-
+.pf-btn-list {
+    justify-content: center;
+    margin-bottom: 72px;
+}
 .portfolio-p {
     font-size: 16px;
     line-height: 1.5;
