--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,10 @@ body {
 
 .list {
     list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 24px;
 }
 
 .btn:hover,
@@ -280,8 +284,4 @@ img {
 }
 .about-company-item {
     width: calc((100% - 72px) / 4);
-}
-.about-company {
-    display: flex;
-    gap: 24px;
 }
