--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,6 @@ body {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
-
     position: absolute;
     width: 1px;
     height: 1px;
@@ -154,7 +153,7 @@ body {
 .hero {
     background-color: var(--dark-osh-color);
     padding-top: 188px;
-    padding-bottom: 188px;    )
+    padding-bottom: 188px;
 }
 
 .hero-title {
