--- a/css/styles.css
+++ b/css/styles.css
@@ -184,6 +184,7 @@ body {
 
 .descr {
     background-color: var(--white-background-color);
+    padding: 0 0 120px 0;
 }
 
 .descr-title {
@@ -193,6 +194,7 @@ body {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--dark-title-color);
+    margin-bottom: 72px;
 }
 
 .team {
