--- a/css/styles.css
+++ b/css/styles.css
@@ -106,12 +106,14 @@ body {
     letter-spacing: 0.02em;
     color: var(--dark-title-color);
     margin-bottom: 8px;
+    text-align: center;
 }
 
 .card-text {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--body-text-color);
+    text-align: center;
 }
 
 .header {
