--- a/css/styles.css
+++ b/css/styles.css
@@ -235,12 +235,16 @@ footer {
 .pf-btn:hover,
 .pf-btn:focus {
     color: #ffffff;
+    border: 1px solid transparent;
+    border-radius: 4px;
 }
 
 .pf-btn {
+    padding: 12px 24px;
+    border: 1px solid var(--light-accent-color);    
     background-color: var(--light-body-color);
     color: var(--accent-color);
-    border: 1px solid var(--light-accent-color);
+    border-radius: 4px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
