--- a/css/styles.css
+++ b/css/styles.css
@@ -76,13 +76,16 @@ body {
 }
 
 .list {
+    display: flex;
+    flex-wrap: wrap;
     list-style: none;
     margin: 0;
     padding: 0;
-    display: flex;
-    gap: 24px;
-    flex-wrap: wrap;
+    column-gap: 24px;
     row-gap: 48px;
+}
+.header-list {
+    gap: 40px;
 }
 
 .btn:hover,
@@ -127,11 +130,6 @@ body {
     letter-spacing: 0.02em;
     color: var(--dark-title-color);font-weight: 500;
 }
-
-.header-list {
-    gap: 40px;
-}
-
 
 .header-nav {
     display: flex;
