--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@ body {
 }
 
 .list {
+    gap: 24px;
     display: flex;
     flex-wrap: wrap;
     list-style: none;
@@ -250,10 +251,17 @@ footer {
     line-height: 1.5;
     letter-spacing: 0.04em;
     text-align: center;
+    width: calc((100% - 48px) / 3);
 }
 .pf-btn-list {
     justify-content: center;
     margin-bottom: 72px;
+}
+.pf-card-descr {
+    padding: 32px 16px;
+    border: 1px solid var(--light-accent-color);
+    border-top: none;
+    margin-bottom: 8px;
 }
 .portfolio-p {
     font-size: 16px;
