--- a/css/styles.css
+++ b/css/styles.css
@@ -257,6 +257,9 @@ footer {
     justify-content: center;
     margin-bottom: 72px;
 }
+.pf-item {
+    width: calc((100% - 48px) / 3);
+}
 .pf-card-descr {
     padding: 32px 16px;
     border: 1px solid var(--light-accent-color);
