--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,10 @@ body {
 
 .list { 
     list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 24px;
 
 }
 .header-list {
