--- a/css/styles.css
+++ b/css/styles.css
@@ -319,5 +319,5 @@ img {
     padding: 120px 0;
 }
 .about-company-item {
-    width: calc((100% - 3 * 24px) / 4;
+    flex-basis: calc((100% - 72px) / 4));
 }
