--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,8 @@ body {
 }
 
 .logo-footer {
+    display: inline-block;
+    margin-bottom: 16px;
     font-family: "Raleway", sans-serif;
     font-style: normal;
     font-weight: 800;
