--- a/css/styles.css
+++ b/css/styles.css
@@ -262,6 +262,7 @@ footer {
 .pf-list {
     flex-wrap: wrap;
     gap: 24px;
+    row-gap: 48px;
 }
 .pf-item {
     width: calc((100% - 48px) / 3);
