--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,7 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
+    gap: 24px;
 }
 .header-list {
     gap: 40px;
@@ -256,12 +257,10 @@ footer {
 .pf-btn-list {
     justify-content: center;
     margin-bottom: 72px;
-    display: flex;
-    gap: 24px;
 }
 .pf-list {
     flex-wrap: wrap;
-    gap: 24px;
+    column-gap: 24px;
     row-gap: 48px;
 }
 .pf-item {
