--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,7 @@ footer {
     row-gap: 48px;
 }
 .pf-item {
-    width: calc((100% - 48px) / 3);
+    width: calc((100%-48px)/3);
 }
 .pf-card-descr {
     padding: 32px 16px;
