--- a/css/styles.css
+++ b/css/styles.css
@@ -220,6 +220,7 @@ footer {
     color: var(--light-body-color);
     line-height: 1.5;
     letter-spacing: 0.02em;
+    width: 264px;
 }
 
 .footer-span {
