--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,8 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
+    display: block;
+    margin: 0 auto;
     min-width: 169px;
     height: 56px;
     border: none;
