--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body {
 .link {
     font-family: inherit;
     text-decoration: none;
-    padding: 24px 0 24px;
+    padding: 24px 0;
 }
 
 .link:hover,
@@ -107,6 +107,7 @@ body {
 
 .address {
     font-style: normal;
+    margin-left: auto;
 }
 
 .address-link {
@@ -114,6 +115,7 @@ body {
     font-style: normal;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    display: block;
 }
 
 .hero {
@@ -212,7 +214,7 @@ body {
     row-gap: 48px;
 }
 .pf-item {
-    width: calc((100%-48px)/3);
+    width: calc((100% - 48px) / 3);
 }
 .pf-card-descr {
     padding: 32px 16px;
